# simple-web-api

./: .flake8  .gitignore  .pre-commit-config.yaml  makefile  pyproject.toml  requirements-dev.txt  requirements.txt
simple_web_api/: app.py  crud.py  db.py  model.py  settings.py
simple_web_api/config/: __init__.py  _conf.py  settings.toml
tests/unittests/: conftest.py  test_crud.py  test_db.py  test_settings.py
